[package]
name = "journai_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.18.1"
axum = "0.7.4"
axum_thiserror = "0.1.0"
bson = { version = "2.9.0", features = ["chrono"] }
chrono = { version = "0.4.32", features = ["serde"] }
chrono-tz = "0.9.0"
color-eyre = "0.6.2"
dotenvy = "0.15.7"
futures-util = "0.3.30"
http-body-util = "0.1.1"
mongodb = { version = "2.8.0", features = ["bson-chrono-0_4"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
